--- a/package.json
+++ b/package.json
@@ -1,15 +1,51 @@
 {
   "name": "translate-ext",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "Azure Translator API Action Button - Azure DevOps Boards Extension",
+  "keywords": [
+    "vsix",
+    "Azure DevOps",
+    "Azure Translator API"
+  ],
+  "author": "Ratko Ćosić",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dedalusmax/translate-ext"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "clean": "rimraf ./dist",
+    "compile": "npm run clean && webpack --mode production",
+    "compile:dev": "npm run clean && webpack --mode development",
+    "build": "npm run compile",
+    "build:dev": "npm run compile:dev && npm run postbuild",
+    "postbuild": "npm run package-extension -- --rev-version",
+    "package-extension": "tfx extension create --manifest-globs azure-devops-extension.json src/Components/**/*.json --output-path packages",
+    "publish-extension": "tfx extension publish --manifest-globs azure-devops-extension.json src/Components/**/*.json"
+  },  
   "dependencies": {
-    "azure-devops-extension-sdk": "^4.0.2"
+    "azure-devops-extension-api": "~4.231.0",
+    "azure-devops-extension-sdk": "~4.0.2",
+    "azure-devops-ui": "~2.167.87",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1"
+  },
+  "devDependencies": {
+    "@types/react": "~16.8.2",
+    "@types/react-dom": "~16.8.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.10.0",
+    "loader-utils": "^3.2.1",
+    "node-sass": "^9.0.0",
+    "rimraf": "~5.0.5",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "style-loader": "^3.3.4",
+    "tfx-cli": "^0.16.0",
+    "ts-loader": "~9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4"
   }
 }
